Minor fixes in UI & added dark mode

--- a/src/index.css
+++ b/src/index.css
@@ -5,7 +5,7 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-  background-color: rgba(17, 24, 39, 1);
+  /* background-color: rgba(17, 24, 39, 1); */
 }
 
 code {
